Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

** Use the notes.html file instead of this file for change notes?

Thanks!


2.3.0.2300
----------
- Add folder ordering option (manually or by name).

2.2.3.2213
----------
- Change standard product URLs to the new www.vienna-rss.org web site.
- Improvement to Send Link for multiple links and escaped characters. (Patch from Anmol Khirbat).

2.2.2.2212
----------
- Fix cookie handling on Leopard. (This could cause crashes.)
- Fix error in Spanish translation. (Thanks to Ramon.)

2.2.2.2211
----------
- Fix crash when web page attempts to open pop-under window.

2.2.1.2210
----------
- Fix appearance of search field in toolbar when using small size.
- Fix the visual glitch in which the unread count and progress indicator were slightly overlapping
  with the scroll bar if present.
- Update the styles menu in the toolbar when adding a style.
- Added Portuguese localisation. (Thanks to Rui Carlos A. Gon√ßalves).
- Added Turkish localisation. (Thanks to Emrah Omuris).
- Updated German, Italian, Traditional Chinese, and Ukranian localisations.
- Updated Spanish localisation (Thanks to Dani Carril).
- Fix feed parsing crash on PowerPC machines (Patch from Paul Livesey).
- Possible fix for crashes in ArticleController.
- Fix the truncated right pane in Leopard.
- Fix long-standing issue with many messages in console.log while downloading (Patch from Martin H√§cker).
- Add support for blogging with MarsEdit 2.

2.2.0.2209
----------
- More minor toolbar bug fixes.
- Updated toolbar button bitmaps.

2.2.0.2208
----------
- Fixed bug: ampersand in folder name broke smart folder criteria.
- Fix shrinking toolbar button bug.
- Fix problem where Vienna failed to launch under 10.3.9.

2.2.0.2207
----------