@@ -4,8 +4,15 @@
 </head>
 <body>
 <ul>
-<li></li>
+<li>Drop Mac OS X 10.3 Panther support.</li>
 <li>Add folder ordering option (manually or by name).</li>
+<li>Improvement to Send Link for multiple links and escaped characters. (Patch from Anmol Khirbat).</li>
+<li>Change standard product URLs to the new www.vienna-rss.org web site.</li>
+<li>Bug fix: Truncated Headings in LA Times Feeds</li>
+<li>Bug fix: Unescaped HTML in titles.</li>
+<li>Bug fix: Incorrect document URL shown after downloads.</li>
+<li>Bug fix: Option-clicking the close tab widget closed the main Articles tab.</li>
+<li>Add Kaku http://ppmweb.lolipop.jp/apps/kaku to the list of supported blog editors.</li>
 </ul>
 </body>
 </html>
